# creole

./: .gitignore  COPYRIGHT  ChangeLog  Doxyfile.in  Makefile.am  Makefile.mingw  README.md  autogen.sh  carrier.apspec.in  carrier.desktop.in  carrier.spec  carrier.spec.in  config.h.in  config.h.mingw  configure.ac
carrier/: Makefile.am  Makefile.mingw  carrier-2.pc.in  carrier-uninstalled.pc.in  carrier.pc.in  gtkblist.c  gtkconv.c  gtkdialogs.c  gtkimhtml.c  gtkmain.c  gtkprefs.c  gtkstatusbox.c  gtkthemes.c  gtkutils.c  gtkutils.h  minidialog.c  pidgin.h  pidginstock.c  pidginstock.h
carrier/pixmaps/: Makefile.am  Makefile.in  Makefile.mingw
carrier/pixmaps/emotes/none/: Makefile.am  Makefile.in  Makefile.mingw
carrier/plugins/: Makefile.am  Makefile.mingw  manualsize.c  relnot.c
carrier/plugins/cap/: Makefile.am  Makefile.mingw
carrier/plugins/disco/: Makefile.am
carrier/plugins/musicmessaging/: Makefile.am
carrier/plugins/perl/: Makefile.am
carrier/plugins/ticker/: Makefile.am
carrier/plugins/webkit/: Makefile.am  Template.html  webkit.c
carrier/plugins/webkit/Cloudbourne.AdiumMessageStyle/Contents/Resources/: Status.html
carrier/plugins/webkit/Cloudbourne.AdiumMessageStyle/Contents/Resources/Incoming/: Context.html
carrier/plugins/webkit/Cloudbourne.AdiumMessageStyle/Contents/Resources/Outgoing/: Content.html  Context.html
carrier/plugins/webkit/defaultstyle/Contents/Resources/: main.css
carrier/plugins/webkit/defaultstyle/Contents/Resources/Incoming/: Content.html  NextContent.html
carrier/trunk/: COPYRIGHT  ChangeLog  ChangeLog.API  Makefile.am  Makefile.mingw  README.bonus-carrier-patches  carrier.apspec.in  carrier.desktop.in  carrier.spec  config.h.in  configure.ac  doxy2devhelp.xsl  intltool-merge.in
carrier/trunk/carrier/: Makefile.am  Makefile.mingw  carrier-2-uninstalled.pc.in  carrier.pc.in  gtkaccount.c  gtkblist.c  gtkconv.c  gtkdnd-hints.c  gtkimhtml.c  gtkimhtml.h  gtkmain.c  gtkprefs.c  gtkstatusbox.c  gtkthemes.c  gtkutils.c  gtkutils.h  minidialog.c  pidgin.h
carrier/trunk/carrier/plugins/disco/: Makefile.am
carrier/trunk/carrier/plugins/webkit/: Makefile.am  Makefile.mingw  prefs.c  prefs.h  webkit.c  webkit.h
carrier/trunk/carrier/plugins/webkit/.libs/: webkit.lai
carrier/trunk/carrier/plugins/webkit/Cloudbourne.AdiumMessageStyle/Contents/Resources/Incoming/: NextContext.html
carrier/trunk/carrier/plugins/webkit/Cloudbourne.AdiumMessageStyle/Contents/Resources/Outgoing/: NextContent.html  NextContext.html
carrier/trunk/debian/: carrier-dbg.install  carrier-dev.doc-base  carrier-menu.xpm  carrier.preinst  changelog  control  copyright.in  dh_carrier  rules  watch
carrier/trunk/doc/: Makefile.am  carrier.1.in
carrier/trunk/libpurple/: dbus-bindings.c  dbus-types.c  purple-client-bindings.c
carrier/trunk/patches/: aim-chat-ban-unban.patch  mail-notification-event.patch  series
carrier/trunk/po/: ar.po  bs.po  da.po  el.po  en_AU.po  en_CA.po  eo.po  es.po  eu.po  fa.po  id.po  ja.po  ku.po  lo.po  lt.po  my_MM.po  ne.po  nl.po  pa.po  pl.po  pt.po  sr.po  th.po  tr.po  zh_TW.po
carrier/win32/: carrier_exe_rc.rc.in  pidgin_dll_rc.rc.in
carrier/win32/nsis/: carrier-installer.nsi  carrier-plugin.nsh  (+1 more)
debian/: carrier-data.install  carrier-dev.dirs  carrier-dev.install  carrier-dev.preinst  carrier.install  carrier.menu
debian/lintian-override/: carrier
doc/: Makefile.am  carrier.1.in
libpurple/: purple-client-bindings.h
libpurple/win32/: global.mak  targets.mak
patches/: aim-chat-ban-unban.patch  jabber-service-discovery.patch  mail-notification-event.patch  series  ssl-strong-ciphers.patch
po/: Makefile.mingw  am.po  az.po  bg.po  bn.po  ca@valencia.po  dz.po  es.po  gl.po  gu.po  hi.po  ka.po  kn.po  ko.po  lt.po  nb.po  ps.po  ru.po  sr@latin.po  ta.po  te.po  uk.po  ur.po  xh.po  zh_CN.po  zh_HK.po  zh_TW.po
share/ca-certs/: Makefile.in
(+60 files in other folders)
